pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-default-backend-no-rules-tls.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-default-backend-no-rules-tls
  namespace: default

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - whoami.localhost
      secretName: whoami-tls
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
